--- a/assets/gatos.css
+++ b/assets/gatos.css
@@ -126,7 +126,7 @@ a:hover {
 }
 
 #secciones-ayuda .carta1{
-    background-image: url("/img/ARCANO.jpg");
+    background-image: url("/img/chimu.png");
     background-color: white;
     background-repeat: no-repeat;
     background-position: center center;
@@ -140,7 +140,7 @@ a:hover {
 }
 
 #secciones-ayuda .carta2{
-    background-image: url("/img/LOBO.jpg");
+    background-image: url("/img/sarabi.jpg");
     background-color: white;
     background-repeat: no-repeat;
     background-position:center;
@@ -153,7 +153,7 @@ a:hover {
 }
 
 #secciones-ayuda .carta3{
-    background-image: url("/img/DOKI.jpg");
+    background-image: url("/img/hax.jpeg");
     background-color: white;
     background-repeat: no-repeat;
     background-position: center center;
@@ -195,31 +195,7 @@ a:hover {
     }
 
     #contenido .img-container{
-        background-image: url("/img/soloperro.png");
-        background-size: contain;
-        background-position: center center;
-        background-repeat: no-repeat;
-        width: 50%;
-    }
-
-    #contenido .img-arcano{
-        background-image: url("/img/ARCANO.jpg");
-        background-size: contain;
-        background-position: center center;
-        background-repeat: no-repeat;
-        width: 50%;
-    }
-
-    #contenido .img-doki{
-        background-image: url("/img/DOKI.jpg");
-        background-size: contain;
-        background-position: center center;
-        background-repeat: no-repeat;
-        width: 50%;
-    }
-
-    #contenido .img-lobo{
-        background-image: url("/img/LOBO.jpg");
+        background-image: url("/img/sologato.png");
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
@@ -252,6 +228,32 @@ a:hover {
         background-repeat: no-repeat;
         width: 600px;
     }
+
+    #contenido .img-chimuela{
+        background-image: url("/img/chimu.png");
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 600px;
+    }
+
+    #contenido .img-sarabi{
+        background-image: url("/img/sarabi.jpg");
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 600px;
+    }
+
+    #contenido .img-hax{
+        background-image: url("/img/hax2.jpeg");
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 600px;
+    }
+
+    
     
     #integrantes .container {
         display: flex;
