--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ h3{font-size: 3.5em; font-family: 'Bebas Neue', cursive;}
 p{font-size: 1.25em;}
 li{font-size: 1.25em;   text-align: center;}
 
+/*BOTONES*/
 button{
     font-size: 1.5em;
     font-weight: bolder;
